[package]
name = "fieldvis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorous = "1.0.12"
kdtree = "0.7.0"
macroquad = "0.4.0"
netcdf = { version = "0.9.0", features = ["static"] }
structopt = "0.3.26"

